--- a/primer-sdk-android/src/main/res/values/styles.xml
+++ b/primer-sdk-android/src/main/res/values/styles.xml
@@ -63,6 +63,10 @@
         <item name="android:textSize">@dimen/primer_text_size_title</item>
     </style>
 
+    <style name="Primer.Text.SubTitle" parent="Primer.Text">
+        <item name="android:textSize">@dimen/primer_text_size_sm</item>
+    </style>
+
     <style name="Primer.Text.FormLabelSmall">
         <item name="android:textColor">@color/primer_text_color_muted</item>
         <item name="android:textSize">11dp</item>
@@ -78,7 +82,6 @@
     </style>
 
     <style name="Primer.Text.Title" parent="Primer.Text.Large">
-
 <!--        <item name="android:textFontWeight">500</item>-->
     </style>
 
