--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -127,40 +127,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
-
-        <io.primer.android.ui.components.ButtonPrimaryLayout
-            android:id="@+id/card_form_submit_button"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
+        <io.primer.android.ui.components.ButtonPrimary
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/button_primary_bg"
-            android:elevation="@dimen/primer_button_elevation"
-            android:paddingStart="@dimen/primer_button_padding_horiz"
-            android:paddingEnd="@dimen/primer_button_padding_horiz">
-
-            <TextView
-                android:id="@+id/card_form_submit_button_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/primer_button_primary_fg"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ProgressBar
-                android:id="@+id/card_form_submit_button_loading"
-                android:layout_width="22dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_toEndOf="@id/card_form_submit_button_txt"
-                android:theme="@style/Theme.AppCompat.PrimerUniversalCheckout.WhiteAccent"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/card_form_submit_button_txt"
-                app:layout_constraintTop_toTopOf="parent" />
-        </io.primer.android.ui.components.ButtonPrimaryLayout>
+            android:id="@+id/card_form_submit_button"
+            />
     </LinearLayout>
 
 </LinearLayout>
