--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <item name="primer_text_size_title" type="dimen">20sp</item>
     <item name="primer_text_size_md" type="dimen">18sp</item>
     <item name="primer_text_size_sm" type="dimen">16sp</item>
+    <item name="primer_text_size_button" type="dimen">14sp</item>
     <item name="primer_text_size_xs" type="dimen">10sp</item>
 
     <!--  Payment methods  -->
