--- a/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
@@ -41,6 +41,15 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/form_progress_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="14dp"
+        />
+
     <TextView
         android:id="@+id/form_title_description"
         style="@style/Primer.Text.SubTitle"
