--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0"?>
 <resources>
-    <!--  General layout things  -->
-    <item name="primer_checkout_sheet_padding_vert" type="dimen">22dp</item>
-    <item name="primer_checkout_sheet_padding_horiz" type="dimen">14dp</item>
+    <dimen name="primer_checkout_sheet_padding_vert">22dp</dimen>
+    <dimen name="primer_checkout_sheet_padding_horiz">14dp</dimen>
 
-    <!--  General Style stuff  -->
-    <item name="primer_corner_radius" type="dimen">6dp</item>
-    <item name="primer_border_width" type="dimen">1dp</item>
-    <item name="primer_list_margin" type="dimen">13dp</item>
+    <dimen name="primer_corner_radius">6dp</dimen>
+    <dimen name="primer_border_width">1dp</dimen>
+    <dimen name="primer_list_margin">13dp</dimen>
 
     <!--  Forms  -->
-    <item name="primer_form_title_margin" type="dimen">28dp</item>
-    <item name="primer_input_spacing_vert" type="dimen">21dp</item>
-    <item name="primer_input_spacing_horiz" type="dimen">28dp</item>
-    <item name="primer_button_elevation" type="dimen">2dp</item>
-    <item name="primer_button_padding_horiz" type="dimen">16dp</item>
+    <dimen name="primer_form_title_margin">28dp</dimen>
+    <dimen name="primer_input_spacing_vert">21dp</dimen>
+    <dimen name="primer_input_spacing_horiz">28dp</dimen>
+    <dimen name="primer_button_elevation">2dp</dimen>
+    <dimen name="primer_button_padding_horiz">16dp</dimen>
 
-    <!--  Text stuff  -->
-    <item name="primer_text_size_title" type="dimen">20sp</item>
-    <item name="primer_text_size_md" type="dimen">18sp</item>
-    <item name="primer_text_size_sm" type="dimen">16sp</item>
-    <item name="primer_text_size_button" type="dimen">14sp</item>
-    <item name="primer_text_size_xs" type="dimen">10sp</item>
+    <dimen name="primer_text_size_title">20sp</dimen>
+    <dimen name="primer_text_size_md">18sp</dimen>
+    <dimen name="primer_text_size_sm">16sp</dimen>
+    <dimen name="primer_text_size_button">14sp</dimen>
+    <dimen name="primer_text_size_xs">10sp</dimen>
 
     <!--  Payment methods  -->
-    <item name="primer_payment_method_preview_button_height" type="dimen">50dp</item>
-
-
-    <!--  Card Scanner Things  -->
-
+    <dimen name="primer_payment_method_preview_button_height">50dp</dimen>
 </resources>
