--- a/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_form_view_controls"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
     <io.primer.android.ui.components.ButtonPrimary
         android:id="@+id/form_button_cta"
         android:layout_width="match_parent"
