--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -21,5 +21,5 @@
     <dimen name="primer_text_size_xs">10sp</dimen>
 
     <!--  Payment methods  -->
-    <dimen name="primer_payment_method_preview_button_height">50dp</dimen>
+    <dimen name="primer_payment_method_preview_button_height">48sp</dimen>
 </resources>
