--- a/primer-sdk-android/src/main/res/layout/googlepay_white_button_no_shadow.xml
+++ b/primer-sdk-android/src/main/res/layout/googlepay_white_button_no_shadow.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="48sp"
+    android:background="@color/klarna">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="true"
     android:focusable="true"
@@ -29,3 +33,4 @@
         android:duplicateParentState="true"
         android:src="@drawable/googlepay_button_overlay"/>
 </RelativeLayout>
+</FrameLayout>
