--- a/primer-sdk-android/src/main/res/layout/googlepay_white_button_no_shadow.xml
+++ b/primer-sdk-android/src/main/res/layout/googlepay_white_button_no_shadow.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="48sp"
-    android:background="@color/klarna">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:clickable="true"
-    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="48sp"
     android:background="@drawable/googlepay_white_button_no_shadow_background"
-    android:paddingTop="2sp"
-    android:contentDescription="@string/googlepay_button_content_description">
+    android:clickable="true"
+    android:contentDescription="@string/googlepay_button_content_description"
+    android:focusable="true"
+    android:paddingTop="2sp">
+
     <LinearLayout
-        android:duplicateParentState="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="2"
+        android:duplicateParentState="true"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="2">
+
         <ImageView
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:scaleType="fitCenter"
+            android:layout_weight="1"
             android:duplicateParentState="true"
-            android:src="@drawable/googlepay_white_button_content"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/googlepay_white_button_content" />
     </LinearLayout>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
         android:duplicateParentState="true"
-        android:src="@drawable/googlepay_button_overlay"/>
+        android:scaleType="fitXY"
+        android:src="@drawable/googlepay_button_overlay" />
 </RelativeLayout>
-</FrameLayout>
