--- a/primer-sdk-android/src/main/res/layout/googlepay_black_button.xml
+++ b/primer-sdk-android/src/main/res/layout/googlepay_black_button.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="48sp"
     android:background="@drawable/googlepay_black_button_no_shadow_background"
     android:clickable="true"
     android:contentDescription="@string/googlepay_button_content_description"
     android:focusable="true"
-    android:padding="2sp">
+    android:paddingTop="2sp">
 
     <LinearLayout
         android:layout_width="match_parent"
