--- a/primer-sdk-android/src/main/res/layout/payment_method_item.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_item.xml
@@ -15,12 +15,12 @@
         android:id="@+id/title_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Mastercard"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:layout_marginStart="@dimen/medium_large_padding"
+        android:layout_marginTop="@dimen/medium_large_padding"
+        android:layout_marginBottom="@dimen/medium_large_padding"
+        android:text="@string/mastercard"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/primer_text_size_sm"
         app:layout_constraintBottom_toTopOf="@+id/subtitle_label"
         app:layout_constraintStart_toEndOf="@+id/payment_method_icon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,10 +29,10 @@
         android:id="@+id/subtitle_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="John Doe"
-        android:textColor="#000000"
-        android:textSize="12sp"
+        android:layout_marginBottom="@dimen/medium_large_padding"
+        android:text="@string/john_doe"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/primer_text_size_s"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/title_label" />
 
@@ -40,10 +40,10 @@
         android:id="@+id/last_four_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:text="•••• 1234"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:layout_marginEnd="@dimen/medium_large_padding"
+        android:text="@string/_1234"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/primer_text_size_sm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/title_label" />
 
@@ -51,9 +51,9 @@
         android:id="@+id/expiry_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expires 12 / 21"
-        android:textColor="#000000"
-        android:textSize="12sp"
+        android:text="@string/expires_12_21"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/primer_text_size_s"
         app:layout_constraintBottom_toBottomOf="@+id/subtitle_label"
         app:layout_constraintEnd_toEndOf="@+id/last_four_label"
         app:layout_constraintTop_toTopOf="@+id/subtitle_label" />
@@ -62,12 +62,12 @@
         android:id="@+id/payment_method_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="@dimen/medium_large_padding"
+        android:layout_marginTop="@dimen/medium_large_padding"
+        android:layout_marginBottom="@dimen/medium_large_padding"
         android:background="@null"
         android:clickable="false"
-        android:contentDescription="payment method icon"
+        android:contentDescription="@string/payment_method_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="H,2:3"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,13 +77,13 @@
         android:id="@+id/title_view_alt"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="@dimen/medium_large_padding"
+        android:layout_marginTop="@dimen/medium_large_padding"
+        android:layout_marginBottom="@dimen/medium_large_padding"
         android:gravity="center_vertical"
-        android:text="test@mail.com"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:text="@string/test_mail_com"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/primer_text_size_sm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/payment_method_icon"
         app:layout_constraintTop_toTopOf="parent"
