--- a/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
@@ -13,7 +13,6 @@
         android:layout_marginTop="@dimen/large_vertical_margin"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:padding="@dimen/small_padding"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/choose_payment_method_label">
 
@@ -31,13 +30,12 @@
         android:id="@+id/primer_sheet_payment_methods_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:layout_marginTop="@dimen/medium_vertical_margin"
         android:orientation="vertical"
-        android:padding="@dimen/small_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saved_payment_method_section" />
+        app:layout_constraintTop_toBottomOf="@+id/other_ways_to_pay_label" />
 
     <TextView
         android:id="@+id/choose_payment_method_label"
@@ -45,63 +43,53 @@
         android:layout_height="wrap_content"
         android:text="@string/choose_payment_method"
         android:textColor="@android:color/black"
-        android:padding="@dimen/small_padding"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:fontFamily="@font/roboto_medium"
         android:textSize="20sp"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/saved_payment_method_section"
+    <TextView
+        android:id="@+id/saved_payment_method_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium_vertical_margin"
+        android:text="@string/saved_payment_methods"
+        android:textColor="@color/primer_text_color_muted"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/primer_sheet_title_layout" />
+
+    <include
+        android:id="@+id/saved_payment_method"
+        layout="@layout/payment_method_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:padding="@dimen/small_padding"
-        app:layout_constraintTop_toBottomOf="@+id/primer_sheet_title_layout">
+        android:layout_marginTop="@dimen/medium_vertical_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saved_payment_method_label" />
 
-        <TextView
-            android:id="@+id/saved_payment_method_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium_vertical_margin"
-            android:text="@string/saved_payment_method"
-            android:textColor="@color/primer_text_color_muted"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/see_all_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:text="@string/see_all"
+        android:textAllCaps="true"
+        android:textColor="@color/primer_button_primary"
+        android:fontFamily="@font/roboto_medium"
+        app:layout_constraintEnd_toEndOf="@+id/saved_payment_method"
+        app:layout_constraintStart_toStartOf="@+id/saved_payment_method"
+        app:layout_constraintTop_toBottomOf="@+id/saved_payment_method" />
 
-        <include
-            android:id="@+id/include"
-            layout="@layout/payment_method_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium_vertical_margin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/saved_payment_method_label" />
+    <TextView
+        android:id="@+id/other_ways_to_pay_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium_vertical_margin"
+        android:text="@string/available_payment_methods"
+        android:textColor="@color/primer_text_color_muted"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/see_all_label" />
 
-        <TextView
-            android:id="@+id/see_all_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_vertical_margin"
-            android:text="@string/see_all"
-            android:textAllCaps="true"
-            android:textColor="@color/primer_button_primary"
-            android:fontFamily="@font/roboto_medium"
-            app:layout_constraintEnd_toEndOf="@+id/include"
-            app:layout_constraintStart_toStartOf="@+id/include"
-            app:layout_constraintTop_toBottomOf="@+id/include" />
-
-        <TextView
-            android:id="@+id/other_ways_to_pay_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium_vertical_margin"
-            android:text="@string/other_ways_to_pay"
-            android:textColor="@color/primer_text_color_muted"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/see_all_label" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
