add see all nav + some styling fixes 👒

--- a/primer-sdk-android/src/main/res/values-v28/styles.xml
+++ b/primer-sdk-android/src/main/res/values-v28/styles.xml
@@ -7,4 +7,9 @@
         <item name="android:fontFamily">roboto</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+    <style name="Primer.Text.Title.Small" parent="Primer.Text.Large">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
 </resources>
