--- a/primer-sdk-android/src/main/res/layout/fragment_vaulted_payment_methods.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_vaulted_payment_methods.xml
@@ -31,7 +31,7 @@
             android:paddingEnd="11dp">
 
             <TextView
-                style="@style/Primer.Text.Title"
+                style="@style/Primer.Text.Title.Small"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
