--- a/primer-sdk-android/src/main/res/values/styles.xml
+++ b/primer-sdk-android/src/main/res/values/styles.xml
@@ -47,6 +47,7 @@
         <item name="android:textColor">@color/primer_app_primary</item>
         <item name="textAllCaps">true</item>
         <item name="android:background">@android:color/transparent</item>
+        <item name="android:textSize">17sp</item>
     </style>
 
     <style name="Primer.Button.Text.Primary" parent="Primer.Button.Text">
