--- a/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<io.primer.android.ui.components.NestedScrollViewSurface xmlns:android="http://schemas.android.com/apk/res/android"
+<io.primer.android.ui.components.PrimerThemedNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,4 +12,4 @@
         android:paddingRight="@dimen/primer_checkout_sheet_padding_horiz"
         android:paddingBottom="@dimen/primer_checkout_sheet_padding_vert" />
 
-</io.primer.android.ui.components.NestedScrollViewSurface>
+</io.primer.android.ui.components.PrimerThemedNestedScrollView>
